--- a/server/public/views/hero-list.html
+++ b/server/public/views/hero-list.html
@@ -1,2 +1,4 @@
-<p>This should show a list of all heroes in the system, displaying all the information from the entry captured in the view before. 
-    Each hero in the listing needs to be able to be deleted from the system in the event of their unfortunate demise.</p>
+
+<!-- starting assignment descriptive text -->
+<!-- <p>This should show a list of all heroes in the system, displaying all the information from the entry captured in the view before.
+    Each hero in the listing needs to be able to be deleted from the system in the event of their unfortunate demise.</p> -->
