--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -1,24 +1,18 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <title>Department of Emerging Superhero Knowledge</title>
-  <script src="vendors/angular.min.js" charset="utf-8"></script>
-  <script src="vendors/angular-route.min.js" charset="utf-8"></script>
-  <script src="scripts/client.js" charset="utf-8"></script>
-  <script src="scripts/controllers/hero-list.js" charset="utf-8"></script>
-</head>
-
-<body ng-app="HeroApp">
-  <h1>Department of Emerging Superhero Knowledge</h1>
-  <nav>
-    <ul>
-      <li><a href="#!heroList">Hero List</a></li>
-      <li><a href="#!addHero">Add New Hero</a></li>
-    </ul>
-  </nav>
-  <main ng-view></main>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <title>Department of Emerging Superhero Knowledge</title>
+    <script type="text/javascript" src="vendor/angular.min.js"></script>
+    <script type="text/javascript" src="vendor/angular-route.min.js"></script>
+    <script type="text/javascript" src="scripts/client.js"></script>
+    <script type="text/javascript" src="controllers/hero.entry.controller.js"></script>
+    <script type="text/javascript" src="controllers/hero.edit.controller.js"></script>
+    <link rel="stylesheet" href="vendor/bootstrap.min.css">
+  </head>
+  <body ng-app="app">
+    <h1>Department of Emerging Superhero Knowledge</h1>
+    <div ng-include="'/views/templates/nav.html'"></div>
+    <main ng-view></main>
+  </body>
 </html>
