--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="controllers/hero.entry.controller.js"></script>
     <script type="text/javascript" src="controllers/hero.edit.controller.js"></script>
     <link rel="stylesheet" href="vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body ng-app="app">
     <h1>Department of Emerging Superhero Knowledge</h1>
