--- a/server/public/views/templates/hero-edit.html
+++ b/server/public/views/templates/hero-edit.html
@@ -15,7 +15,7 @@
         <td>{{hero.alias}}</td>
         <td>{{hero.power_id}}</td>
         <td>{{hero.description}}</td>
-        <td><button ng-click="edit.deleteHero(hero)">REMOVE</button></td>
+        <td id="heroRemove"><button ng-click="edit.deleteHero(hero)">REMOVE</button></td>
       </tr>
     </tbody>
   </table>
