--- a/server/public/views/templates/nav.html
+++ b/server/public/views/templates/nav.html
@@ -1,4 +1,4 @@
 <ul id="navigation">
-  <li><a href="#heroentry">Super Hero Entry</a></li>
-  <li><a href="#heroedit">Super Hero Table W/ Removal</a></li>
+  <li><a href="#heroentry" class="navigation">Super Hero Entry</a></li>
+  <li><a href="#heroedit" class="navigation">Super Hero Table W/ Removal</a></li>
 </ul>
